apps/media/flaresolverr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
  labels:
    app: flaresolverr
spec:
  selector:
    app: flaresolverr
  ports:
    - name: http
      port: 8191
      protocol: TCP
      targetPort: http
  type: ClusterIP
