apps/media/flaresolverr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flaresolverr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flaresolverr.i.recompiled.org`)
      kind: Rule
      services:
        - name: flaresolverr
          port: 8191
  tls:
    secretName: flaresolverr-tls
